--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7fcb4">  <td>24/05/30 12:17:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flipkart.flipkart()[pri:0, instance:FlipKart.Flipkart@76505305]">flipkart</td> 
+<tr bgcolor="efe5e5">  <td>24/06/06 16:38:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebScrapper.WebscrapeTeam()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">WebscrapeTeam</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b7fcb4">  <td>24/05/30 12:17:49</td>   <td>-6745</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Flipkart.setUp()[pri:0, instance:FlipKart.Flipkart@76505305]">&gt;&gt;setUp</td> 
+<tr bgcolor="efe5e5">  <td>24/06/06 16:39:23</td>   <td>27124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebScrapper.WebscraperFlim()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">WebscraperFlim</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="efe5e5">  <td>24/06/06 16:38:51</td>   <td>-4704</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebScrapper.setUp()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b7fcb4">  <td>24/05/30 12:18:22</td>   <td>25455</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Flipkart.tearDown()[pri:0, instance:FlipKart.Flipkart@76505305]">&lt;&lt;tearDown</td> 
+<tr bgcolor="efe5e5">  <td>24/06/06 16:39:54</td>   <td>59067</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebScrapper.tearDown()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
