--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="efe5e5">  <td>24/06/06 16:38:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebScrapper.setUp()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">&gt;&gt;setUp</td> 
+<tr bgcolor="82c3c3">  <td>24/06/07 18:02:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="youtube.youTube()[pri:0, instance:YouTube.youtube@3d285d7e]">youTube</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="82c3c3">  <td>24/06/07 18:04:06</td>   <td>91942</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;youtube.tearDown()[pri:0, instance:YouTube.youtube@3d285d7e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="efe5e5">  <td>24/06/06 16:39:23</td>   <td>31828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebScrapper.WebscraperFlim()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">WebscraperFlim</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="efe5e5">  <td>24/06/06 16:38:55</td>   <td>4704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebScrapper.WebscrapeTeam()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">WebscrapeTeam</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="efe5e5">  <td>24/06/06 16:39:54</td>   <td>63771</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebScrapper.tearDown()[pri:0, instance:WebScrapper.WebScrapper@73a1e9a9]">&lt;&lt;tearDown</td> 
+<tr bgcolor="82c3c3">  <td>24/06/07 18:02:27</td>   <td>-6965</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;youtube.setUp()[pri:0, instance:YouTube.youtube@3d285d7e]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
